# Px-PRG-4EA

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Introduction/src/: introduction.pptx
pid_dc_motor_position_control/src/: main.c
pid_dc_motor_speed_control/include/: config.h
student-packages/PROJECT-REGULATION/: CMakeLists.txt  DATA_LOGGING.md  README.md
student-packages/PROJECT-REGULATION/Non-Blocking-Serial/: CMakeLists.txt  Non-Blocking-Serial.c  README.md
student-packages/PROJECT-REGULATION/include/: AS5600.h
student-packages/PROJECT-REGULATION/src/: AS5600.c  main.c
student-packages/c-revision/: C_revison.pptx  README.md
student-packages/lecture-1/: CMakeLists.txt  README.md  main.c
student-packages/lecture-2/: CMakeLists.txt  README.md  main.c
student-packages/lecture-3/: CMakeLists.txt  README.md  main.c
student-packages/lecture-4/: README.md
student-packages/test1-morse-code/: test1-morse-code.c
teacher-packeges/: CMakeLists.txt
teacher-packeges/lecture-1/: CMakeLists.txt  main.c
teacher-packeges/lecture-2/: CMakeLists.txt  README.md  main.c
teacher-packeges/lecture-3/: CMakeLists.txt  lecture-3.c
teacher-packeges/lecture-4/: CMakeLists.txt  lecture-4.c
teacher-packeges/pid_dc_motor_position_control/: CMakeLists.txt  README.md
teacher-packeges/pid_dc_motor_position_control/include/: config.h
teacher-packeges/pid_dc_motor_speed_control/: CMakeLists.txt  README.md
teacher-packeges/pid_dc_motor_speed_control/src/: main.c
teacher-packeges/test1_morse_code/: CMakeLists.txt  README.md  test1_morse_code.c
utils/include/: utils.h
utils/src/: utils.c
(+2 files in other folders)
